[gd_scene load_steps=2 format=3 uid="uid://bqxvn8y7qxqxq"]

[ext_resource type="Script" path="res://addons/scene_generator/dock/generator_dock.gd" id="1_0x8y7"]

[node name="GeneratorDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x8y7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Scene Generator"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AreaTypeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Area Type:"

[node name="AreaTypeOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="SizeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Size (Grid Units):"

[node name="SizeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WidthSpinBox" type="SpinBox" parent="VBoxContainer/SizeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 5.0
max_value = 50.0
value = 10.0

[node name="Label" type="Label" parent="VBoxContainer/SizeContainer"]
layout_mode = 2
text = "x"

[node name="HeightSpinBox" type="SpinBox" parent="VBoxContainer/SizeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 5.0
max_value = 50.0
value = 10.0

[node name="InteriorCheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Interior Spaces"

[node name="SeedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Seed:"

[node name="SeedContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SeedSpinBox" type="SpinBox" parent="VBoxContainer/SeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 999999.0

[node name="NewSeedButton" type="Button" parent="VBoxContainer/SeedContainer"]
layout_mode = 2
text = "New"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Generate Scene"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready"
horizontal_alignment = 1